调理首页颜色细节

--- a/Public/css/Home/Index/index.css
+++ b/Public/css/Home/Index/index.css
@@ -13,13 +13,19 @@
 	margin-right: 14px;
 	font-size: 14px;
 	line-height: 20px;
-	background-color: #333
+	background-color: #333;
+	-webkit-transition: background 0.3s;
+	-o-transition: background 0.3s;
+	transition: background 0.3s;
 }
 .pre-cat:hover {
 	background-color: #d14836
 }
 .pre-cat:hover .pre-catarrow {
-	border-left-color: #D14836
+	border-left-color: #D14836;
+	-webkit-transition: background 0.3s;
+	-o-transition: background 0.3s;
+	transition: background 0.3s;
 }
 .pre-catarrow {
 	position: absolute;
@@ -36,11 +42,13 @@
 .pre-catinner a {
 	color: white;
 	display: block;
-	padding: 1px 6px
+	padding: 1px 6px;
+	
 }
 .b-img img {
 	width: 220px;
 	height: 150px;
+	cursor: pointer;
 }
 .b-l1 {
 	height: 30px
@@ -56,7 +64,10 @@
 	display: block;
 	padding-right: 35px;
 	font-family: "Microsoft Yahei", arial, helvetica, sans-serif;
-	font-weight: bold
+	font-weight: bold;
+	-webkit-transition: background 0.3s;
+	-o-transition: background 0.3s;
+	transition: background 0.3s;
 }
 .b-title a:hover {
 	color: #d14836
@@ -65,7 +76,11 @@
 	float: right
 }
 .b-read span {
-	background-color: #D14836
+	background-color: #D14836;
+	cursor: default;
+	-webkit-transition: background 0.3s;
+	-o-transition: background 0.3s;
+	transition: background 0.3s;
 }
 .b-read span:hover {
 	background-color: #993300
@@ -75,11 +90,22 @@
 	margin-right: 5px
 }
 .b-comment span {
-	background-color: #0099CC
+	background-color: #0099CC;
+	cursor:default;
+	-webkit-transition: background 0.3s;
+	-o-transition: background 0.3s;
+	transition: background 0.3s;
 }
 .b-comment span:hover {
-	background-color: #0066CC
+	background-color: #0066CC;
 }
+.b-content{	
+	cursor: pointer;
+	-webkit-transition: color 0.1s;
+	-o-transition: color 0.1s;
+	transition: colort 0.1s;
+}
+.b-content:hover{color: #0099CC;}
 
 /* 第三例 */
 .column3:nth-child(0) {
