--- a/Public/css/Admin/Blog/create.css
+++ b/Public/css/Admin/Blog/create.css
@@ -33,7 +33,7 @@ ul{
 	border-radius: 5px;
 }
 
-.public .ct_title,.pre_title{
+.public .ct_title,.pre_title,.meta .ct_title,.category .ct_title{
 	padding: 5px;
 	border-bottom: #ddd 1px solid;
 }
@@ -92,4 +92,131 @@ ul{
 	margin: 5px 5px;
 	font-size: 12px;
 	padding: 4px 6px;
+}
+.meta_input input{
+	
+}
+.meta_input span{
+	font-size: 12px;
+	padding:3px 5px;
+	margin-left: 5px;
+}
+.meta_input{
+	margin-left: 5px;
+	padding-top: 5px;
+}
+.meta_zone{
+	margin-left: 5px;
+	min-height: 20px;
+}
+.meta_zone span{
+	color:grey;
+	cursor: pointer;
+}
+
+.meta_zone span i{
+	margin-right: 2px;
+	transition:color .2s ease-in;
+}
+
+.meta_zone span i:hover{
+	margin-right: 2px;
+	color: red;
+}
+.metaGet{
+	margin-left: 5px;
+}
+.metaGet a{
+	color:#6666CC ;
+	font-size: 12px;
+}
+.cate_input{
+	list-style: none;
+}
+
+
+.cate_input ul li{
+	position: relative;
+	list-style: none;
+	display: inline;
+	padding: 3px 5px;
+}
+
+.cate_input ul li a{
+	color: #9999cc;
+	font-size: 13px;
+
+}
+
+.cate_active{
+	border: 1px solid #dfdfdf;
+	border-bottom-color: #fdfdfd;
+	background-color: #fdfdfd;
+}
+.cate_all,.cate_usual{
+	min-height: 20px;
+	background-color: #fdfdfd;
+	border: #dfdfdf 1px solid;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.cate_usual{
+	display: none;
+}
+
+.metaAdd a{
+	color: #9999cc;
+}
+.metaAdd,#metaAddZone{
+	padding:5px;
+}
+#metaAddZone input,#metaAddZone select{
+	margin: 5px;
+}
+
+.shadow{
+	z-index:9999;
+	position: absolute;
+	opacity: .5;
+	background-color: #000;
+	width: 100%;
+	display: none;
+	top: 0;
+	left:0;
+}
+.imgModal{
+	z-index: 9999;
+	display: none;
+	top: 20px;
+	left:30%;
+	width: 700px;
+	height: 600px;
+	position: absolute;
+	background-color: #fff;
+}
+
+div.postImg{
+	width: 106px;
+	height: 66px;
+	display: inline-block;
+	padding: 2px;
+	border: #000 1px solid;
+	vertical-align: middle;
+	margin: 2px;
+	line-height: 58px;
+	cursor: pointer;
+	text-align: center;
+}
+div.postImg:hover{
+	border:red 1px solid;
+}
+
+div.choicedImg{
+	border:red 1px solid;
+}
+
+.postImg img{
+	max-width: 100px;
+	max-height: 60px;
 }
